# flights-scraper-web-app

./: .gitignore  .pre-commit-config.yaml  justfile  pyproject.toml  setup.cfg
.github/workflows/: actions.yaml
src/: alembic.ini  docker-compose.yaml  main.py
src/alembic/: env.py
src/alembic/versions/: 27613065a23c_fix_flight_schema.py  7372020f0ccb_change_is_round_trip_to_is_two_way_trip.py  8aa9b7a0cedb_fix_flight_schema_to_embed_params_id.py  ab7136c2bb1a_first_commit.py
src/apis/: api.py
src/apis/v1/: endpoints.py  flights.py
src/apps/: api.py
src/apps/v1/: endpoints.py  render_templates.py
src/core/: config.py
src/core/scraper/: scraper.py  utils.py
src/dashboard/: app.py
src/db/: base.py  session.py
src/db/crud/: flight.py  parameter.py
src/db/models/: flight.py  parameter.py
src/entities/: flight.py
src/static/: style.css
src/templates/: layout.html
src/templates/flight-details/: home.html
