[tool.poetry]
name = "flights-scraper-web-app"
version = "0.1.0"
description = "Flights Scraper Web App"
authors = ["Alessandro Miola <alessandro1.miola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
jinja2 = "^3.1.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
python-dotenv = "^1.0.0"
alembic = "^1.12.0"
python-multipart = "^0.0.6"
psycopg2 = "^2.9.7"
environs = "^9.5.0"
selenium = "^4.13.0"
dash = "^2.14.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^24.1.1"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
preview = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py310"
output-format = "grouped"
show-fixes = true

[tool.ruff.lint]
select = [
  # default
  "E",      # pycodestyle error
  "F",      # flake8 error
  # extra
  "A",      # builtin shadowing
  "B",      # flake8 bugbear
  "BLE",    # avoid bare excepts
  "C4",     # simplify comprehensions
  "G",      # logging format
  "I",      # isort imports
  "N",      # conform to PEP8 naming rules
  "RET",    # return values
  "S",      # bandit
  "TRY",    # exceptions antipatterns
  "UP",     # upgrade syntax
  "W",      # pycodestyle warning
  "YTT",    # wrong usage of sys.info
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Form"]

[tool.ruff.lint.per-file-ignores]
"src/core/scraper/scraper.py" = ["N812"]
"src/db/base.py" = ["F401"]
"src/db/base_class.py" = ["N805"]
"src/entities/flight.py" = ["S101"]
